Fixed image and smiley's alignment on text

--- a/naxos/static/css/naxos.css
+++ b/naxos/static/css/naxos.css
@@ -61,7 +61,7 @@ div.post {
 /* Smiley alignment + appearance */
 .smiley {
     vertical-align:bottom;
-    padding-bottom:5px;
+    padding-bottom:4px;
 }
 .fake-link {
     cursor: pointer;
@@ -69,6 +69,7 @@ div.post {
 /* Image alignment in posts */
 .post-content > img {
     vertical-align:bottom;
+    padding-bottom:4px;
 }
 /* Force some links appearance */
 a.lastMessage:link {
